workshop/controller/sample/speedtest/speedtest-sample.yml
apiVersion: v1
kind: Pod
metadata:
  name: speedtest
  namespace: default
  labels:
    name: speedtest
spec:
    containers:
    - name: openspeedtest
      image: openspeedtest/latest:latest
      imagePullPolicy: IfNotPresent
      ports:
      - containerPort: 8080
    - name: librespeed
      image: adolfintel/speedtest
      imagePullPolicy: IfNotPresent
      ports:
      - containerPort: 80
    - name: debug
      image: ubuntu
      command: [ "/bin/bash", "-c", "--" ]        
      args: [ "while true; do sleep 300000; done;" ]
      imagePullPolicy: IfNotPresent
