workshop/controller/sample/speedtest/speedtest_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: speedtest-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: speedtest
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.1.0/24
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 8080
